@@ -6,30 +6,22 @@ GUI to navigate over LMDB data
 ## Limitations
 
 * Only single database files can be opened.
-* Search by key
+* Tested on Ubuntu 20.04
 
-## Executing the JAR 
+## Executing the App
 
 Get the file from: https://github.com/cleve/lmdb-viewer/blob/master/release/lmdb-viewer.zip
 
-### Requirements
+Extract and execute the app under the *bin* directory.
 
-+ Java 11 (Javafx does not work with java < 11)
+```sh
+./lmdb-viewer
+``` 
+
+### Requirements for dev
+
++ Java 11+ (Javafx does not work with java < 11)
 
 + You will need to get javafx library:
 
     https://gluonhq.com/products/javafx/
-
-After that, in the viewer.sh file, add your path:
-
-```sh
-java --module-path /path_to_lib/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml -jar lmdb-viewer.jar
-```
-
-### Executing it
-
-Add execution permission to the file ***viewer.sh*** and execute:
-
-```sh
-./viewer.sh
-```
